syntax = "proto3";

package api.webdav;

option go_package = "github.com/synctv-org/vendors/api/webdav;webdav";
option java_multiple_files = true;
option java_package = "api.webdav";

import "google/api/annotations.proto";

service Webdav {
  rpc FsGet(FsGetReq) returns (FsGetResp) {
    option (google.api.http) = {
      post : "/fs/get"
      body : "*"
    };
  };
  rpc FsList(FsListReq) returns (FsListResp) {
    option (google.api.http) = {
      post : "/fs/list"
      body : "*"
    };
  };
  rpc FsSearch(FsSearchReq) returns (FsSearchResp) {
    option (google.api.http) = {
      post : "/fs/search"
      body : "*"
    };
  };
  rpc FsTest(FsTestReq) returns (Empty) {
    option (google.api.http) = {
      post : "/fs/test"
      body : "*"
    };
  };
}

message Empty {}

message FsTestReq {
  string host = 1;
  string username = 2;
  string password = 3;
}

message FsGetReq {
  string host = 1;
  string username = 2;
  string password = 3;
  string path = 4;
}

message FsGetResp {
  string name = 1;
  int64 size = 2;
  bool isDir = 3;
  int64 modified = 4;
}

message FsListReq {
  string host = 1;
  string username = 2;
  string password = 3;
  string path = 4;
  uint64 page = 5;
  uint64 perPage = 6;
}

message FsListResp {
  message FsListContent {
    string name = 1;
    int64 size = 2;
    bool isDir = 3;
    int64 modified = 4;
  }
  repeated FsListContent content = 1;
  uint64 total = 2;
}

message FsSearchReq {
  string host = 1;
  string username = 2;
  string password = 3;
  string path = 4;
  string keywords = 5;
  uint64 page = 6;
  uint64 perPage = 7;
}

message FsSearchResp {
  message FsSearchContent {
    string name = 1;
    bool isDir = 2;
    int64 size = 3;
  }
  repeated FsSearchContent content = 1;
  uint64 total = 2;
}